--- a/american.html
+++ b/american.html
@@ -2,12 +2,13 @@
 <html lang="en" id="html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, interactive-widget=resizes-content"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, interactive-widget=overlays-content"/>
     <link rel="manifest" href="manifest.json"/>
 
     <title>/ɪnfɫɛkt/</title>
     <script>america=true</script>
     <script src="load.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script> 
     <script src="dict_US/extras.js"></script>
     <script src="borowedCode.js"></script>
     <script src="makePuzzle.js"></script>
@@ -17,15 +18,17 @@
     <link rel=icon href="icons/favicon.png">
 </head>
 <body onload="onBodyLoad()">
-    <div id="mainMenu">
-        <h1>/ɪnfɫɛkt/</h1>
+    <div id="mainMenu" style="visibility: hidden;">
+        <h1 id="title">/ɪnfɫɛkt/</h1>
         <div id="difficultySelector" class="mainMenuMultiChoice">
             Difficulty:
             <br class="showOnMobile">
-            <button id="begginer" onclick="selectDifficulty('begginer')">Beginner</button>
-            <button id="easy" onclick="selectDifficulty('easy')">Easy</button>
-            <button id="medium" onclick="selectDifficulty('medium')">Medium</button>
-            <button id="hard" onclick="selectDifficulty('hard')">Hard</button>
+            <button id="lvl0" onclick="selectDifficulty('lvl0')">0</button>
+            <button id="lvl1" onclick="selectDifficulty('lvl1')">1</button>
+            <button id="lvl2" onclick="selectDifficulty('lvl2')">2</button>
+            <button id="lvl3" onclick="selectDifficulty('lvl3')">3</button>
+            <button id="lvl4" onclick="selectDifficulty('lvl4')">4</button>
+            <button id="lvl5" onclick="selectDifficulty('lvl5')">5</button>
             <button id="custom" onclick="selectDifficulty('custom')">Custom</button>
             <div id="customDificulty" style="display: none;">
                 <span class="numberInput">
@@ -50,8 +53,12 @@
             <button>General American English</button>
         </div>
         <div>
-            <button id="playButton" class="menuButton" onclick="requestAnimationFrame(play)">Play!</button>
+            <button id="playButton" class="menuButton" onclick="requestAnimationFrame(play)">Play</button>
+            <button id="playButtonDaily" class="menuButton" onclick="playDaily()">Daily</button>
             <button class="menuButton" onclick="startTutorial()">Tutorial</button>
+        </div>
+        <div>
+            <span class="dailyTimer">Daily puzzles reset in </span><span class="dailyTimer" id="dailyTimer"></span>
         </div>
         <span id="progress"></span>
         <div class="showOnMobile" style="margin-top: 1em;">
@@ -171,11 +178,20 @@
         <div id="shareMenu" style="display: none;">
             <div id="shareMenuStyler" class="canScroll">
                 <span id="shareToolBar" class="canScroll">
-                    <button id="copyButton" class="canScroll">Copy to Clipboard</button>
+                    <button id="shareImageButton" style="display: none;" onclick="shareBoard()">Share</button>
+                    <span id="copyButtons">
+                        <button id="copyButton" class="canScroll">Copy Image</button>
+                        <button id="copyLinkButton" class="canScroll">Copy Link</button>
+                    </span>
+                    <div class="mainMenuMultiChoice" id="shareTypeSelector">
+                        <button id="copySolution" onclick="changeShareType('solution')">Solution</button>
+                        <button id="copyPuzzle" onclick="changeShareType('puzzle')">Puzzle</button>
+                    </div>
                     <button class="iconButton fontSizeScale" class="canScroll" onclick="document.getElementById('shareMenu').style.display='none'">
                         <img class="canScroll" src="icons/close-large-line.svg" alt="">
                     </button>
                 </span>
+                <span id="puzzleLink"></span>
                 <div class="canScroll">
                     <img class="canScroll" id="sharePreview" src="" alt="">
                 </div>
